# mmc

./: .gitignore  ABSTRACT.md  CHANGELOG.md  Dockerfile  README.md  SUBMISSION.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
demo/: README.md  VIDEO_SCRIPT.md  app.py  demo_interventions.json  loop_replay.json
mmc/baselines/: consensus.py  foundation.py  linear.py  mean.py
mmc/compile/: perturb.py  simulate.py  structural.py  structural_jax.py  to_ode.py
mmc/data/: module_extract.py  precondition.py  slice_zhu.py  splits.py  zhu_program_regulators.txt
mmc/eval/: conserved_rewired.py  controls.py  evaluate.py  holdout.py  metrics.py
mmc/fit/: diagnose.py  fit_params.py  fit_structural.py
mmc/grammar/: model_spec.py
mmc/loop/: ensemble.py  propose.py  repair.py  residuals.py  run.py
mmc/shared/: __init__.py  llm.py  moonen.py  receipts.py  store.py  trace.py
paper/: GATE_DISCRIMINATION.md  LIMIT_MAP.md  NORMAN_RESULT.md  engineer_behavior.json  engineer_behavior_scaled.json  gate_discrimination.json  gate_synthetic_control.json  norman_positive_control.json  norman_result.json
prereg/: PREREG.md  PREREG_discovery.md  PREREG_norman.md
scripts/: activation_toycheck.py  baseline_screen.py  capture_loop_trace.py  cytokine_module.py  demo_loop.py  demo_precompute.py  engineer_behavior.py  engineer_behavior_figure.py  engineer_behavior_scaled.py  engineer_behavior_scaled_figure.py  freeze_model.py  gate_discrimination.py  gate_synthetic_control.py  known_structure_probe.py  norman_epistasis.py  norman_positive_control.py  norman_pseudobulk.py  precondition_summary.py  refit_check.py  replay_loop.py  run_cytokine_discovery.py  run_discovery.py  run_eval.py  run_precondition.py  structural_selfcheck.py  th2_holdout_gate.py
tests/: test_baselines.py  test_controls.py  test_ensemble.py  test_eval.py  test_fit.py  test_gates.py  test_grammar.py  test_holdout.py  test_metrics.py  test_precondition.py  test_residuals.py  test_shared.py  test_simulator.py  test_splits.py  test_structural.py
